# innowise_laboratory

lecture_1/: main.py  pyproject.toml
lecture_2/: main.py
